--- a/英语.md
+++ b/英语.md
@@ -1,7 +1,23 @@
 # 爱好
-I came into contact with photography when I was a freshman, and I was fascinated by the feeling of capturing the moment of light and shadow. By purchasing the book of landscape photographer Chu Weimin, I had a systematic study of composition and framing and PS.
+I came into contact with photography when I was a freshman, and I was fascinated by the feeling of capturing the moment of light and shadow. By purchasing the book of landscape photographer Chu Weimin, I had a systematic study of composition framing and PS.
 
 # 母校
 Athough it is not as good as your school in terms of software and hardware, I did not complain about thesurrounding environment and focused on improvimg myself. I hope to enter a larger platform through efforts.
 
 the most valuable change during my undergraduate period was that I learned to walk out of my comfort zone because no one forced me to study at the University. I knew that I could show my competitiveness in studying only by forcing myself.
+
+# 自我介绍
+// Good afternoon, teachers. I’m very glad to be here for this interview and very pleased to meet you.
+
+My name is Li Kuihao. I’m currently majoring in computer science and Technology in Njtech University.
+
+During my college years, I studied hard and got good grades.I not only won the first prize in the Lanqiao Cup provincial competition and the second prize in the national competition, but also a school-level scholarship every year.In engineering, I got internship opportunities from Tencent and Byte, but the pursuit of deeper academic exploration at a young age inspired me to choose the postgraduate entrance examination.
+Engaging these contests provides me with a valuable chance to learn through experiment experience and establish my scientific thinking.
+
+Next, I'd like to introduce my personality and some interests. As you can see, I am an optimistic student and have good abilities as well as a strong sense of responsibility. I see myself as a relentless problem-solver, and I’m always looking for a new challenge.
+
+At last, I am very interested in my major and I love my school very much. I used to engage in Propaganda Department to take photos for school news. So, I think this experience will help me devote myself to school days better.
+
+That’s all for my self-introduction. Thanks for listening.
+
+
